develop: Section A and B submissions

--- a/de-2021/Section_B.ipynb
+++ b/de-2021/Section_B.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "presidential-ultimate",
+   "id": "physical-creativity",
    "metadata": {},
    "outputs": [
     {
@@ -36,6 +36,7 @@
     "        .config(\"spark.shuffle.service.enabled\", True)\\\n",
     "        .config(\"spark.dynamicAllocation.executorIdleTimeout\",\"30s\")\\\n",
     "        .config(\"spark.executor.cores\",2)\\\n",
+    "        .config(\"spark.cores.max\",4)\\\n",
     "        .config(\"spark.driver.port\",9998)\\\n",
     "        .config(\"spark.blockManager.port\",10005)\\\n",
     "        .getOrCreate()"
@@ -43,8 +44,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "corporate-understanding",
+   "execution_count": 2,
+   "id": "digital-asset",
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +63,7 @@
        " Row(Ticket number='1106506413', Issue Date='2015-12-22T00:00:00', Issue time='1100', Meter Id=None, Marked Time=None, RP State Plate='CA', Plate Expiry Date='201701', VIN=None, Make='NISS', Body Style='PA', Color='SI', Location='1159 HUNTLEY DR', Route='2A75', Agency='1', Violation code='8069AA', Violation Description='NO STOP/STAND AM', Fine amount='93', Latitude='99999', Longitude='99999')]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,8 +76,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "legal-retention",
+   "execution_count": 3,
+   "id": "narrow-marathon",
    "metadata": {},
    "outputs": [
     {
@@ -119,8 +120,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "double-thirty",
+   "execution_count": 4,
+   "id": "limiting-nature",
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +130,7 @@
        "9257460"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,8 +142,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "naval-milwaukee",
+   "execution_count": 5,
+   "id": "compatible-arcade",
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +152,7 @@
        "10"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,8 +164,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "fourth-jacket",
+   "execution_count": 6,
+   "id": "approximate-tablet",
    "metadata": {},
    "outputs": [
     {
@@ -212,125 +213,181 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
-   "id": "cloudy-denial",
+   "execution_count": 7,
+   "id": "hungarian-monaco",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "505.0\n",
-      "1\n",
-      "+-----------+-----------+\n",
-      "|Fine amount|Fine amount|\n",
-      "+-----------+-----------+\n",
-      "|       58.0|          0|\n",
-      "|       30.0|          0|\n",
-      "|      105.0|          0|\n",
-      "|      353.0|          0|\n",
-      "|      163.0|          0|\n",
-      "|      143.0|          0|\n",
-      "|      113.0|          0|\n",
-      "|      255.0|          0|\n",
-      "|       null|          0|\n",
-      "|      293.0|          0|\n",
-      "|      345.0|          0|\n",
-      "|       55.0|          0|\n",
-      "|       70.0|          0|\n",
-      "|       65.0|          0|\n",
-      "|       10.0|          0|\n",
-      "|      505.0|          6|\n",
-      "|       85.0|          0|\n",
-      "|       53.0|          0|\n",
-      "|       68.0|          0|\n",
-      "|      128.0|          0|\n",
-      "+-----------+-----------+\n",
+      "Maximum fine amount:  505.0\n",
+      "+-----------+-----+\n",
+      "|Fine amount|count|\n",
+      "+-----------+-----+\n",
+      "|      505.0|    6|\n",
+      "+-----------+-----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#B.6 Find the maximum fine amount. How many fines have this amount?\n",
+    "citations_new_floatAmount = citations_new.withColumn(\"Fine amount\", citations_new['Fine amount'].cast('float'))\n",
+    "\n",
+    "max_float_amount = citations_new_floatAmount.agg({\"Fine amount\": \"max\"}).collect()[0]\n",
+    "print(\"Maximum fine amount: \", max_float_amount[\"max(Fine amount)\"])\n",
+    "\n",
+    "fine_amounts_counts = citations_new_floatAmount.groupBy(\"Fine amount\").count()\n",
+    "fines_with_max_amount = fine_amounts_counts.filter(fine_amounts_counts['Fine amount'] == max_float_amount[\"max(Fine amount)\"])\n",
+    "fines_with_max_amount.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "contrary-access",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+-------+\n",
+      "|Make|  count|\n",
+      "+----+-------+\n",
+      "|TOYT|1531949|\n",
+      "|HOND|1043276|\n",
+      "|FORD| 807498|\n",
+      "|NISS| 662097|\n",
+      "|CHEV| 631413|\n",
+      "| BMW| 422916|\n",
+      "|MERZ| 376830|\n",
+      "|VOLK| 316002|\n",
+      "|HYUN| 285286|\n",
+      "|DODG| 271590|\n",
+      "|LEXS| 263269|\n",
+      "| KIA| 217795|\n",
+      "|JEEP| 214965|\n",
+      "|AUDI| 179718|\n",
+      "|MAZD| 169811|\n",
+      "|OTHR| 154376|\n",
+      "| GMC| 132788|\n",
+      "|INFI| 120340|\n",
+      "|CHRY| 120317|\n",
+      "|ACUR| 111265|\n",
+      "+----+-------+\n",
       "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#B.7 Show the top 20 most frequent vehicle makes, and their frequencies.\n",
+    "#from pyspark.sql.functions import desc\n",
+    "frquent_vehicle_make = citations_new_floatAmount.groupBy(\"Make\").count().orderBy(\"count\", ascending=0)\n",
+    "frquent_vehicle_make.show(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "quick-region",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------+-------------------+----------+--------+-----------+--------------+-----------------+----+----------+-----+------------------+-----+------+--------------+---------------------+-----------+----------+\n",
+      "|Ticket number|         Issue Date|Issue time|Meter Id|Marked Time|RP State Plate|Plate Expiry Date|Make|Body Style|Color|          Location|Route|Agency|Violation code|Violation Description|Fine amount|color long|\n",
+      "+-------------+-------------------+----------+--------+-----------+--------------+-----------------+----+----------+-----+------------------+-----+------+--------------+---------------------+-----------+----------+\n",
+      "|   1103341116|2015-12-21T00:00:00|      1251|    null|       null|            CA|           200304|HOND|        PA|   GY|   13147 WELBY WAY|01521|     1|        4000A1|   NO EVIDENCE OF REG|       50.0|      Gray|\n",
+      "|   1103700150|2015-12-21T00:00:00|      1435|    null|       null|            CA|           201512| GMC|        VN|   WH|     525 S MAIN ST| 1C51|     1|        4000A1|   NO EVIDENCE OF REG|       50.0|     White|\n",
+      "|   1104803000|2015-12-21T00:00:00|      2055|    null|       null|            CA|           201503|NISS|        PA|   BK|     200 WORLD WAY|  2R2|     2|          8939|           WHITE CURB|       58.0|     Black|\n",
+      "|   1104820732|2015-12-26T00:00:00|      1515|    null|       null|            CA|             null|ACUR|        PA|   WH|     100 WORLD WAY| 2F11|     2|           000|               17104h|       null|     White|\n",
+      "|   1105461453|2015-09-15T00:00:00|       115|    null|       null|            CA|           200316|CHEV|        PA|   BK|GEORGIA ST/OLYMPIC|1FB70|     1|         8069A| NO STOPPING/STANDING|       93.0|     Black|\n",
+      "|   1106226590|2015-09-15T00:00:00|        19|    null|       null|            CA|           201507|CHEV|        VN|   GY|SAN PEDRO S/O BOYD|1A35W|     1|        4000A1|   NO EVIDENCE OF REG|       50.0|      Gray|\n",
+      "|   1106500452|2015-12-17T00:00:00|      1710|    null|       null|            CA|           201605|MAZD|        PA|   BL|   SUNSET/ALVARADO|00217|     1|          8070| PARK IN GRID LOCK ZN|      163.0|      Blue|\n",
+      "|   1106500463|2015-12-17T00:00:00|      1710|    null|       null|            CA|           201602|TOYO|        PA|   BK|   SUNSET/ALVARADO|00217|     1|          8070| PARK IN GRID LOCK ZN|      163.0|     Black|\n",
+      "|   1106506402|2015-12-22T00:00:00|       945|    null|       null|            CA|           201605|CHEV|        PA|   BR|    721 S WESTLAKE| 2A75|     1|        8069AA|     NO STOP/STAND AM|       93.0|     Brown|\n",
+      "|   1106506413|2015-12-22T00:00:00|      1100|    null|       null|            CA|           201701|NISS|        PA|   SI|   1159 HUNTLEY DR| 2A75|     1|        8069AA|     NO STOP/STAND AM|       93.0|    Silver|\n",
+      "+-------------+-------------------+----------+--------+-----------+--------------+-----------------+----+----------+-----+------------------+-----+------+--------------+---------------------+-----------+----------+\n",
+      "only showing top 10 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#B.8 Let’s expand some abbreviations in the color column. Create a User Defined Function to create a new column, ‘color long’, mapping the original colors to their corresponding values in the dictionary below. \n",
+    "#If there is no key matching the original color, use the original color.\n",
+    "\n",
+    "COLORS = {\n",
+    "'AL':'Aluminum', 'AM':'Amber', 'BG':'Beige', 'BK':'Black',\n",
+    "'BL':'Blue', 'BN':'Brown', 'BR':'Brown', 'BZ':'Bronze',\n",
+    "'CH':'Charcoal', 'DK':'Dark', 'GD':'Gold', 'GO':'Gold',\n",
+    "'GN':'Green', 'GY':'Gray', 'GT':'Granite', 'IV':'Ivory',\n",
+    "'LT':'Light', 'OL':'Olive', 'OR':'Orange', 'MR':'Maroon',\n",
+    "'PK':'Pink', 'RD':'Red', 'RE':'Red', 'SI':'Silver', 'SL':'Silver',\n",
+    "'SM':'Smoke', 'TN':'Tan', 'VT':'Violet', 'WT':'White',\n",
+    "'WH':'White', 'YL':'Yellow', 'YE':'Yellow', 'UN':'Unknown'\n",
+    "}\n",
+    "\n",
+    "#from pyspark.sql.types import StringType\n",
+    "from pyspark.sql.functions import udf\n",
+    "def translate(colors):\n",
+    "    def translate_(mapped_color):\n",
+    "        return_value = mapped_color\n",
+    "        if (COLORS.get(mapped_color) is not None): #If there is no key matching the original color, use the original color.\n",
+    "            return_value = COLORS.get(mapped_color)\n",
+    "        return return_value\n",
+    "    return udf(translate_, StringType())\n",
+    "\n",
+    "\n",
+    "new_citations_color = citations_new_floatAmount.withColumn(\"color long\", translate(COLORS)(\"Color\"))\n",
+    "new_citations_color.show(10)\n",
+    "\n",
+    "#new_citations_color.filter(new_citations_color['color long'] == 'null').show()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "unnecessary-fault",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+----------+------+\n",
+      "|Make|color long| count|\n",
+      "+----+----------+------+\n",
+      "|TOYT|      Gray|346822|\n",
+      "+----+----------+------+\n",
+      "only showing top 1 row\n",
       "\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "9257460"
+       "'Gray'"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#B.6 Find the maximum fine amount. How many fines have this amount?\n",
-    "#citations_new_floatAmount = citations_new.withColumn(\"Fine amount\", citations_new['Fine amount'].cast('float'))\n",
-    "\n",
-    "#citations_new_floatAmount.show()\n",
-    "\n",
-    "\n",
-    "row1 = citations_new_floatAmount.agg({\"Fine amount\": \"max\"}).collect()[0]\n",
-    "print(row1[\"max(Fine amount)\"])\n",
-    "\n",
-    "\n",
-    "row2 = citations_new_floatAmount.agg({\"Fine amount\": \"max\"}).count()\n",
-    "print(row2)\n",
-    "\n",
-    "\n",
-    "\n",
-    "from pyspark.sql.functions import col,when,count\n",
-    "\n",
-    "#citations_new_floatAmount.groupBy(\"Fine amount\").agg(\n",
-    "#    count(when(col(\"Fine amount\") == row1[\"max(Fine amount)\"], True))\n",
-    "#).show()\n",
-    "\n",
-    "\n",
-    "\n",
-    "import pyspark.sql.functions as F\n",
-    "\n",
-    "cnt_cond = lambda cond: F.sum(F.when(cond, 1).otherwise(0))\n",
-    "citations_new_floatAmount.groupBy('Fine amount').agg(\n",
-    "    cnt_cond(F.col('Fine amount') == row1[\"max(Fine amount)\"]).alias('Fine amount')\n",
-    ").show()\n",
-    "\n",
-    "\n",
-    "citations_new_floatAmount.select(citations_new_floatAmount['Fine amount'] == row1[\"max(Fine amount)\"]).count()\n",
-    "\n",
-    "<<STILL WORKING>>\n"
+    "#B.9 Using this new column, what’s the most frequent colour value for Toyotas (TOYT)?\n",
+    "filtered_toyt = new_citations_color.filter(new_citations_color['Make'] == \"TOYT\")\n",
+    "most_frequent_color_toyt = filtered_toyt.groupBy('Make', 'color long').count().orderBy(\"count\", ascending=0)\n",
+    "most_frequent_color_toyt.show(1)\n",
+    "most_frequent_color_toyt.collect()[0][1]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 92,
-   "id": "frequent-commerce",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "   Year  Inflation Rate\n",
-      "0  2016            4.47\n",
-      "1  2017            5.00\n",
-      "2  2018            5.98\n",
-      "3  2019            4.10\n",
-      "Year               object\n",
-      "Inflation Rate    float64\n",
-      "dtype: object\n"
-     ]
-    }
-   ],
-   "source": [
-    " "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "material-snapshot",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
